# D3DTest

./: .gitignore  DDD.sublime-project  DDD.sublime-workspace  README.md
project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Cube.vcxproj  Cube.vcxproj.filters  Test.sln  TutorialCreate.vcxproj  TutorialCreate.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  colorTriangle.vcxproj  colorTriangle.vcxproj.filters
src/: CMakeLists.txt  D3DBase.cpp  D3DBase.h  Frame.cpp  colorTriangle.cpp  cube.cpp  d3dUtility.cpp  d3dUtility.h  directionalLight.cpp  init.cpp  litPyramid.cpp  macros.cmake  main.cpp  pointLight.cpp  spotLight.cpp  stencilMirror.cpp  teapot.cpp  test.cmake  texAlpha.cpp  texCube.cpp  texQuad.cpp  triangle.cpp
